added social and about myself

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 
     <div class="section1">
       <div class="profile">Social</div>
+      <div class="icon1">
+        <img class="icon linkedin" src="linkedin.png" width="128px" alt="Satyaranjan Rout on LinkedIn">
+        <img class="icon facebook" src="facebook.png" width="128px" alt="Satyaranjan Rout on Facebook">
+        <img class="icon github" src="github.png" width="128px" alt="Satyaranjan Rout on Github">
+        <img class="icon twitter" src="twitter.png" width="128px" alt="Satyaranjan Rout on Twitter">
+      </div>
     </div>
 
     <div class="section2">
