completed website i think

--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Satyaranjan Rout a Web Developer</title>
+  <meta name="description" content="Satyaranjan Rout a self-taught programmer who loves web development and design.">
+  <meta name="keywords" content="Satyaranjan, Rout, satyaranjan rout, web developer, programmer,">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Satyaranjan Rout">
   <link rel="stylesheet" type="text/css" href="style.css"/>
   <link href="https://fonts.googleapis.com/css?family=Share:700i|Stint+Ultra+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1><a  class="logo" href="#">Satyaranjan Rout</a></h1>
+    <h1><a  class="logo" href="index.html">Satyaranjan Rout</a></h1>
     <nav class="nav-links">
       <ul class="links">
-        <li><a  class="contact" href="#">contact</a></li>
-        <li><a class="about" href="#">about</a></li>
+        <li><a  class="contact" href="#section3">contact</a></li>
+        <li><a class="about" href="#section2">about</a></li>
       </ul>
     </nav>
   </header>
@@ -29,18 +33,27 @@
 
     <div class="section1">
       <div class="profile">Social</div>
-      <div class="icon1">
-        <img class="icon linkedin" src="linkedin.png" width="128px" alt="Satyaranjan Rout on LinkedIn">
-        <img class="icon facebook" src="facebook.png" width="128px" alt="Satyaranjan Rout on Facebook">
-        <img class="icon github" src="github.png" width="128px" alt="Satyaranjan Rout on Github">
-        <img class="icon twitter" src="twitter.png" width="128px" alt="Satyaranjan Rout on Twitter">
+      <div class="container">
+        <div class="icon"><a href="https://www.linkedin.com/in/satyaranjan-rout-24b538103/" target="_blank"><img class="icon linkedin" src="linkedin.png" width="150px" alt="Satyaranjan Rout on LinkedIn"></a></div>
+        <div class="icon"><a href="https://www.facebook.com/satyaranjan.rout.566/" target="_blank"><img class="icon facebook" src="facebook.png" width="150px" alt="Satyaranjan Rout on Facebook"></a></div>
+        <div class="icon"><a href="https://www.github.com/satanrout" target="_blank"><img class="icon github" src="github.png" width="150px" alt="Satyaranjan Rout on Github"></a></div>
+        <div class="icon"><a href="https://www.twitter.com/satyaranjanro13" target="_blank"><img class="icon twitter" src="twitter.png" width="150px" alt="Satyaranjan Rout on Twitter"></a></div>
+        <!--icon is the same class in div and image and it will cause some problem so rember to update it in future-->
       </div>
     </div>
 
-    <div class="section2">
+    <div id="section2">
       <h2 class="heading1">about myself</h2>
-      <p class="intro">i am a self taught programmer who fell in love with web design and developement. as a kid i was always curious about how everything on internet works, i always thought that internet was magic i mean how else would they create something so beautifull with so many contents like music, movies, games so as i grow older i learned a thing or two about internet then i bought a web developement course from udemy well to be honest i pirated it cause i am broke af then i started learning about web developement. and now i am a web developer.</p>
+      <p class="intro">i am a self-taught programmer who fell in love with web design and development. as a kid i was always wondered how everything on internet works, i always thought that internet was magic i mean how else would they create something so beautiful with so many contents like music, movies, games so as i grow older i learned a thing or two about internet then i bought a web development course from udemy well, to be honest i pirated it cause i am broke af then i started learning about web development. and now i am a web developer.</p>
     </div>
+
+    <div id="section3">
+      <div class="me">contact me</div>
+      <div class="para">I haven't learned php yet so contact form is not available but you can contact me through facebook.</div>
+    </div>
+
+    <footer>© 2009 satyaranjan rout.</footer>
+
   </main>
   <footer>
 
